# golden-dataset

./: .codecov.yml  .gitignore  .releaserc.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
examples/db/datasets/: base.py  bloom_organics.py
examples/db/models/: __init__.py
src/golden_dataset/: __init__.py  cli.py  core.py  exc.py  main.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_main.py
tests/fixtures/: mock_module.py  test_generator.py  test_module1.py  test_module2.py  test_module_engine.py  test_module_function.py  test_module_models.py  test_module_session.py
